--- a/style.css
+++ b/style.css
@@ -60,4 +60,10 @@ body {
     text-align: center;
     margin-top: 5px;
   }
+
+  .dica {
+    color: #ffffff;
+    text-align: center;
+    margin-top: 5px;
+  }
   
